# jade

./: .gitignore  Cargo.toml  derive-rework.toml  tufx.jade.toml
_test/: manifest.jade.toml
_test/derives/: appleskin.jade.toml  fabricapi.jade.toml  iris.jade.toml  sodium.jade.toml
src/: api.rs  composer.rs  main.rs  manifest.rs  package.rs  packwiz_compat.rs  preprocessor.rs  store.rs  util.rs  verbose.rs
src/api_driver/: mod.rs  modrinth.rs
