[package]
name = "jade"
version = "0.1.0"
edition = "2024"


[dependencies]
copy_dir = "0.1.3"
nix-base32 = "0.2.0"
reqwest = { version = "0.12.18", features = ['blocking'] }
serde = "1.0.219"
serde_derive = "1.0.219"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ['rt-multi-thread'] }
toml = "0.8.22"
zip-extensions = "0.8.3"
