[package]
name = "jade"
version = "0.1.0"
edition = "2024"


[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
colorize = "0.1.0"
copy_dir = "0.1.3"
current_platform = "0.2.0"
nix-base32 = "0.2.0"
reqwest = { version = "0.12.18", features = ['blocking'] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ['rt-multi-thread'] }
toml = "0.8.22"
urlencoding = "2.1.3"
zip-extensions = "0.8.3"
